--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -1114,22 +1114,13 @@ html {
 }
 
 /* line 1054, ../sass/screen.scss */
-.administracion-title,
 .administracion-separator,
-.nuevo-usuario-title,
 .nuevo-usuario-separator,
-.ingreso-title,
-.ingreso-title,
-.noticias-title,
-.busquedas-laborales-title,
-.revistas-title,
-#contacto-container,
-.contacto-title,
-.servicios-title {
+#contacto-container {
   max-width: 1000px;
 }
 
-/* line 1069, ../sass/screen.scss */
+/* line 1060, ../sass/screen.scss */
 #financiamiento div h1,
 #sellados div h1 {
   font-family: 'Lato Heavy', serif;
@@ -1137,7 +1128,7 @@ html {
   font-size: 45px;
 }
 
-/* line 1077, ../sass/screen.scss */
+/* line 1068, ../sass/screen.scss */
 #financiamiento div h2,
 #sellados div h2 {
   font-family: 'Montserrat Light', serif;
@@ -1146,7 +1137,7 @@ html {
   line-height: 22px;
 }
 
-/* line 1085, ../sass/screen.scss */
+/* line 1076, ../sass/screen.scss */
 #financiamiento div button,
 #sellados div button {
   width: 110px;
@@ -1167,14 +1158,14 @@ html {
   text-decoration: none;
 }
 
-/* line 1105, ../sass/screen.scss */
+/* line 1096, ../sass/screen.scss */
 #financiamiento div button:hover,
 #sellados div button:hover {
   color: white;
   background-color: #133548;
 }
 
-/* line 1112, ../sass/screen.scss */
+/* line 1103, ../sass/screen.scss */
 #administracion-form,
 #servicios-main-container,
 #noticias-form,
@@ -1185,17 +1176,17 @@ html {
   max-width: 1000px;
 }
 
-/* line 1123, ../sass/screen.scss */
+/* line 1114, ../sass/screen.scss */
 #revistas-form {
   width: 100%;
 }
 
-/* line 1127, ../sass/screen.scss */
+/* line 1118, ../sass/screen.scss */
 #ingreso-form {
   width: 100%;
 }
 
-/* line 1131, ../sass/screen.scss */
+/* line 1122, ../sass/screen.scss */
 #administracion-form,
 #nuevo-usuario-form,
 #ingreso-form {
@@ -1203,7 +1194,7 @@ html {
   flex-direction: column;
   justify-content: flex-start;
 }
-/* line 1137, ../sass/screen.scss */
+/* line 1128, ../sass/screen.scss */
 #administracion-form .administracion-inputs,
 #administracion-form .nuevo-usuario-inputs,
 #nuevo-usuario-form .administracion-inputs,
@@ -1215,7 +1206,7 @@ html {
   flex-wrap: wrap;
 }
 
-/* line 1146, ../sass/screen.scss */
+/* line 1137, ../sass/screen.scss */
 #administracion-oferta,
 #administracion-noticias,
 #administracion-sliders {
@@ -1226,7 +1217,7 @@ html {
   justify-content: flex-start;
 }
 
-/* line 1156, ../sass/screen.scss */
+/* line 1147, ../sass/screen.scss */
 .administracion-title,
 .nuevo-usuario-title,
 .noticias-title,
@@ -1234,7 +1225,7 @@ html {
 .revistas-title,
 .contacto-title,
 .servicios-title {
-  width: 100%;
+  width: 100% !important;
   font-size: 70px;
   font-family: "Montserrat Semibold", sans-serif;
   font-weight: 400;
@@ -1246,9 +1237,22 @@ html {
   background-image: -moz-linear-gradient(left, #dedede, #ffffff);
   background-image: -webkit-linear-gradient(left, #dedede, #ffffff);
   background-image: linear-gradient(to right, #dedede, #ffffff);
+  display: flex;
+  justify-content: center;
+}
+/* line 1166, ../sass/screen.scss */
+.administracion-title div,
+.nuevo-usuario-title div,
+.noticias-title div,
+.busquedas-laborales-title div,
+.revistas-title div,
+.contacto-title div,
+.servicios-title div {
+  width: 100%;
+  max-width: 1000px;
 }
 @media (max-width: 600px) {
-  /* line 1156, ../sass/screen.scss */
+  /* line 1147, ../sass/screen.scss */
   .administracion-title,
   .nuevo-usuario-title,
   .noticias-title,
@@ -1260,19 +1264,19 @@ html {
   }
 }
 
-/* line 1177, ../sass/screen.scss */
+/* line 1176, ../sass/screen.scss */
 .administracion-input,
 .nuevo-usuario-input {
   display: flex;
   flex-direction: column;
   padding: 10px;
 }
-/* line 1182, ../sass/screen.scss */
+/* line 1181, ../sass/screen.scss */
 .administracion-input span,
 .nuevo-usuario-input span {
   margin: 5px;
 }
-/* line 1187, ../sass/screen.scss */
+/* line 1186, ../sass/screen.scss */
 .administracion-input input,
 .administracion-input select,
 .nuevo-usuario-input input,
@@ -1286,7 +1290,7 @@ html {
   margin-bottom: 5px;
 }
 
-/* line 1202, ../sass/screen.scss */
+/* line 1201, ../sass/screen.scss */
 .administracion-input textarea {
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -1299,13 +1303,13 @@ html {
   min-height: 300px;
 }
 
-/* line 1216, ../sass/screen.scss */
+/* line 1215, ../sass/screen.scss */
 .administracion-button-bar,
 .nuevo-usuario-button-bar {
   display: flex;
   flex-direction: row;
 }
-/* line 1222, ../sass/screen.scss */
+/* line 1221, ../sass/screen.scss */
 .administracion-button-bar button,
 .nuevo-usuario-button-bar button {
   background-color: transparent;
@@ -1313,13 +1317,13 @@ html {
   margin-bottom: 20px;
   margin-top: 20px;
 }
-/* line 1228, ../sass/screen.scss */
+/* line 1227, ../sass/screen.scss */
 .administracion-button-bar button:hover,
 .nuevo-usuario-button-bar button:hover {
   border-bottom-color: #17384B;
 }
 
-/* line 1233, ../sass/screen.scss */
+/* line 1232, ../sass/screen.scss */
 .administracion-separator,
 #servicios-inner-separator {
   width: 100%;
@@ -1330,7 +1334,7 @@ html {
   margin-bottom: 50px;
 }
 
-/* line 1243, ../sass/screen.scss */
+/* line 1242, ../sass/screen.scss */
 .administracion-fotos {
   display: flex;
   flex-direction: row;
@@ -1338,7 +1342,7 @@ html {
   margin-bottom: 10px;
 }
 
-/* line 1251, ../sass/screen.scss */
+/* line 1250, ../sass/screen.scss */
 .administracion-fotos span {
   margin-top: 20px;
   margin-bottom: 10px;
@@ -1347,7 +1351,7 @@ html {
   font-size: 15px;
 }
 
-/* line 1260, ../sass/screen.scss */
+/* line 1259, ../sass/screen.scss */
 .input-foto {
   height: 39px;
   width: 39px;
@@ -1356,20 +1360,20 @@ html {
   margin-bottom: 5px;
   margin-top: 5px;
 }
-/* line 1268, ../sass/screen.scss */
+/* line 1267, ../sass/screen.scss */
 .input-foto input {
   opacity: 0;
   height: 39px;
   width: 39px;
 }
-/* line 1273, ../sass/screen.scss */
+/* line 1272, ../sass/screen.scss */
 .input-foto img {
   position: absolute;
   max-height: 38px;
   clip: rect(0px, 39px, 39px, 0px);
 }
 
-/* line 1280, ../sass/screen.scss */
+/* line 1279, ../sass/screen.scss */
 .administracion-sub-title,
 .revistas-sub-title {
   font-family: "Montserrat Semibold", sans-serif;
@@ -1381,14 +1385,14 @@ html {
 }
 
 /*NOTICIAS*/
-/* line 1291, ../sass/screen.scss */
+/* line 1290, ../sass/screen.scss */
 #noticias-filtro {
   display: flex;
   padding: 20px;
   flex-direction: row;
   justify-content: left;
 }
-/* line 1296, ../sass/screen.scss */
+/* line 1295, ../sass/screen.scss */
 #noticias-filtro select {
   margin-right: 2%;
   height: 32px;
@@ -1401,12 +1405,12 @@ html {
   background-color: transparent;
 }
 
-/* line 1339, ../sass/screen.scss */
+/* line 1338, ../sass/screen.scss */
 #noticias-main {
   background-color: #133548;
 }
 
-/* line 1344, ../sass/screen.scss */
+/* line 1343, ../sass/screen.scss */
 #noticias-form {
   max-width: 1000px;
   width: 100%;
@@ -1416,24 +1420,24 @@ html {
   background-color: white;
 }
 
-/* line 1354, ../sass/screen.scss */
+/* line 1353, ../sass/screen.scss */
 #noticias-panel {
   margin: 35px;
 }
 
 @media (min-width: 385px) {
-  /* line 1359, ../sass/screen.scss */
+  /* line 1358, ../sass/screen.scss */
   #noticias-panel-fotos {
     max-width: 50%;
   }
 }
-/* line 1363, ../sass/screen.scss */
+/* line 1362, ../sass/screen.scss */
 #noticias-panel-fotos #noticias-panel-fotos-main {
   overflow: hidden;
   min-height: 400px;
   min-width: 300px;
 }
-/* line 1367, ../sass/screen.scss */
+/* line 1366, ../sass/screen.scss */
 #noticias-panel-fotos #noticias-panel-fotos-main img {
   margin-left: 15px;
   border-radius: 5px;
@@ -1442,7 +1446,7 @@ html {
   max-width: 300px;
   min-width: 300px;
 }
-/* line 1377, ../sass/screen.scss */
+/* line 1376, ../sass/screen.scss */
 #noticias-panel-fotos #noticias-panel-fotos-thumbs img {
   margin-left: 15px;
   margin-top: 5px;
@@ -1451,12 +1455,12 @@ html {
   border-radius: 2px;
 }
 
-/* line 1387, ../sass/screen.scss */
+/* line 1386, ../sass/screen.scss */
 #noticias-panel-texto {
   color: white;
   padding: 5px;
 }
-/* line 1390, ../sass/screen.scss */
+/* line 1389, ../sass/screen.scss */
 #noticias-panel-texto #noticias-panel-titulo {
   width: 100%;
   margin-bottom: 15px;
@@ -1466,7 +1470,7 @@ html {
   color: #FFFFFF;
   font-family: 'Lato Heavy', serif;
 }
-/* line 1401, ../sass/screen.scss */
+/* line 1400, ../sass/screen.scss */
 #noticias-panel-texto #noticias-panel-detalle {
   font-family: 'Montserrat Light', serif;
   width: 95%;
@@ -1480,21 +1484,21 @@ html {
 }
 
 @media (min-width: 600px) {
-  /* line 1414, ../sass/screen.scss */
+  /* line 1413, ../sass/screen.scss */
   #noticias-panel {
     display: flex;
     flex-direction: row-reverse;
   }
 }
 
-/* line 1421, ../sass/screen.scss */
+/* line 1420, ../sass/screen.scss */
 #noticias-nuevo-comentario {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
 }
-/* line 1426, ../sass/screen.scss */
+/* line 1425, ../sass/screen.scss */
 #noticias-nuevo-comentario textarea {
   width: 100%;
   right: 5px;
@@ -1505,14 +1509,14 @@ html {
   -moz-border-radius: 15px;
   border-radius: 15px;
 }
-/* line 1438, ../sass/screen.scss */
+/* line 1437, ../sass/screen.scss */
 #noticias-nuevo-comentario div {
   width: 90%;
   position: relative;
   margin-top: -45px;
   margin-bottom: 20px;
 }
-/* line 1443, ../sass/screen.scss */
+/* line 1442, ../sass/screen.scss */
 #noticias-nuevo-comentario div #noticias-nuevo-btn {
   width: 110px;
   background-color: white;
@@ -1527,19 +1531,19 @@ html {
   text-align: center;
 }
 
-/* line 1460, ../sass/screen.scss */
+/* line 1459, ../sass/screen.scss */
 #noticias-comentarios {
   background-color: #3f6175;
   color: white;
 }
-/* line 1463, ../sass/screen.scss */
+/* line 1462, ../sass/screen.scss */
 #noticias-comentarios #noticias-comentarios-list {
   max-width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-/* line 1470, ../sass/screen.scss */
+/* line 1469, ../sass/screen.scss */
 #noticias-comentarios #noticias-comentarios-title {
   width: 90%;
   font-family: 'Lato Heavy', serif;
@@ -1551,17 +1555,17 @@ html {
   font-size: 38px;
   line-height: 25px;
 }
-/* line 1482, ../sass/screen.scss */
+/* line 1481, ../sass/screen.scss */
 #noticias-comentarios .noticias-comentario {
   max-width: 90%;
   margin-bottom: 20px;
 }
-/* line 1486, ../sass/screen.scss */
+/* line 1485, ../sass/screen.scss */
 #noticias-comentarios .noticias-comentario .noticia-comentario-user {
   line-height: 24px;
   font-size: 23px;
 }
-/* line 1491, ../sass/screen.scss */
+/* line 1490, ../sass/screen.scss */
 #noticias-comentarios .noticias-comentario .noticia-comentario-detalle {
   line-height: 20px;
   font-size: 17px;
@@ -1570,7 +1574,7 @@ html {
 }
 
 /*BUSQUEDAS LABORALES*/
-/* line 1504, ../sass/screen.scss */
+/* line 1503, ../sass/screen.scss */
 #busquedas-laborales,
 #revistas,
 #contacto-inner {
@@ -1582,7 +1586,7 @@ html {
   max-width: 100%;
   margin-top: 100px;
 }
-/* line 1514, ../sass/screen.scss */
+/* line 1513, ../sass/screen.scss */
 #busquedas-laborales input,
 #revistas input,
 #contacto-inner input {
@@ -1595,20 +1599,20 @@ html {
   margin-bottom: 5px;
 }
 @media (max-width: 600px) {
-  /* line 1504, ../sass/screen.scss */
+  /* line 1503, ../sass/screen.scss */
   #busquedas-laborales,
   #revistas,
   #contacto-inner {
     margin-top: 50px;
   }
 }
-/* line 1529, ../sass/screen.scss */
+/* line 1528, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral:nth-child(odd),
 #revistas .busqueda-laboral:nth-child(odd),
 #contacto-inner .busqueda-laboral:nth-child(odd) {
   background-color: #17384B;
 }
-/* line 1534, ../sass/screen.scss */
+/* line 1533, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral:hover,
 #revistas .busqueda-laboral:hover,
 #contacto-inner .busqueda-laboral:hover {
@@ -1618,7 +1622,7 @@ html {
   -o-transform: scale(1.1, 1.1);
   transform: scale(1.1, 1.1);
 }
-/* line 1542, ../sass/screen.scss */
+/* line 1541, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral,
 #revistas .busqueda-laboral,
 #contacto-inner .busqueda-laboral {
@@ -1633,7 +1637,7 @@ html {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-/* line 1558, ../sass/screen.scss */
+/* line 1557, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral .busqueda-laboral-title,
 #revistas .busqueda-laboral .busqueda-laboral-title,
 #contacto-inner .busqueda-laboral .busqueda-laboral-title {
@@ -1642,7 +1646,7 @@ html {
   font-size: 38px;
   padding: 15px;
 }
-/* line 1565, ../sass/screen.scss */
+/* line 1564, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral .busqueda-laboral-texto,
 #revistas .busqueda-laboral .busqueda-laboral-texto,
 #contacto-inner .busqueda-laboral .busqueda-laboral-texto {
@@ -1650,14 +1654,14 @@ html {
   font-family: 'Lato Regular', serif;
   font-size: 16px;
 }
-/* line 1570, ../sass/screen.scss */
+/* line 1569, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral .busqueda-laboral-contacto,
 #revistas .busqueda-laboral .busqueda-laboral-contacto,
 #contacto-inner .busqueda-laboral .busqueda-laboral-contacto {
   padding: 5px;
 }
 
-/* line 1576, ../sass/screen.scss */
+/* line 1575, ../sass/screen.scss */
 #busqueda-laboral-search {
   width: 100%;
   background-color: #000000;
@@ -1667,7 +1671,7 @@ html {
   align-items: center;
   min-height: 80px;
 }
-/* line 1584, ../sass/screen.scss */
+/* line 1583, ../sass/screen.scss */
 #busqueda-laboral-search input {
   background-color: transparent;
   max-width: 1000px;
@@ -1681,33 +1685,33 @@ html {
   margin: 10px;
   padding: 10px;
 }
-/* line 1597, ../sass/screen.scss */
+/* line 1596, ../sass/screen.scss */
 #busqueda-laboral-search input ::-webkit-input-placeholder {
   color: #99C1DA;
 }
-/* line 1601, ../sass/screen.scss */
+/* line 1600, ../sass/screen.scss */
 #busqueda-laboral-search input :-moz-placeholder {
   /* Firefox 18- */
   color: #99C1DA;
 }
-/* line 1606, ../sass/screen.scss */
+/* line 1605, ../sass/screen.scss */
 #busqueda-laboral-search input ::-moz-placeholder {
   /* Firefox 19+ */
   color: #99C1DA;
 }
-/* line 1611, ../sass/screen.scss */
+/* line 1610, ../sass/screen.scss */
 #busqueda-laboral-search input :-ms-input-placeholder {
   color: #99C1DA;
 }
 @media (max-width: 800px) {
-  /* line 1584, ../sass/screen.scss */
+  /* line 1583, ../sass/screen.scss */
   #busqueda-laboral-search input {
     max-width: 95px;
     min-width: 95%;
   }
 }
 
-/* line 1622, ../sass/screen.scss */
+/* line 1621, ../sass/screen.scss */
 #contacto h1 {
   font-family: 'Lato Heavy', serif;
   color: white;
@@ -1716,7 +1720,7 @@ html {
   margin-bottom: 20px;
 }
 
-/* line 1631, ../sass/screen.scss */
+/* line 1630, ../sass/screen.scss */
 #revistas-listado {
   width: 100%;
   max-width: 1000px;
@@ -1727,21 +1731,21 @@ html {
   align-items: flex-start;
 }
 
-/* line 1641, ../sass/screen.scss */
+/* line 1640, ../sass/screen.scss */
 #revistas-form .administracion-inputs {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
 
-/* line 1648, ../sass/screen.scss */
+/* line 1647, ../sass/screen.scss */
 #servicios-main-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-/* line 1654, ../sass/screen.scss */
+/* line 1653, ../sass/screen.scss */
 #servicios-main-container #financiamiento,
 #servicios-main-container #sellados {
   display: flex;
@@ -1750,13 +1754,13 @@ html {
   align-items: center;
 }
 @media (min-width: 600px) {
-  /* line 1654, ../sass/screen.scss */
+  /* line 1653, ../sass/screen.scss */
   #servicios-main-container #financiamiento,
   #servicios-main-container #sellados {
     flex-direction: row;
   }
 }
-/* line 1664, ../sass/screen.scss */
+/* line 1663, ../sass/screen.scss */
 #servicios-main-container #financiamiento div,
 #servicios-main-container #sellados div {
   display: flex;
@@ -1765,7 +1769,7 @@ html {
   align-items: center;
 }
 @media (min-width: 600px) {
-  /* line 1664, ../sass/screen.scss */
+  /* line 1663, ../sass/screen.scss */
   #servicios-main-container #financiamiento div,
   #servicios-main-container #sellados div {
     align-items: flex-start;
@@ -1773,12 +1777,12 @@ html {
   }
 }
 @media (min-width: 600px) {
-  /* line 1677, ../sass/screen.scss */
+  /* line 1676, ../sass/screen.scss */
   #servicios-main-container #sellados {
     flex-direction: row-reverse;
   }
 }
-/* line 1684, ../sass/screen.scss */
+/* line 1683, ../sass/screen.scss */
 #servicios-main-container .servicio-main-icon {
   height: 200px;
   width: 200px;
@@ -1789,7 +1793,7 @@ html {
   margin: 10px;
 }
 @media (min-width: 600px) {
-  /* line 1684, ../sass/screen.scss */
+  /* line 1683, ../sass/screen.scss */
   #servicios-main-container .servicio-main-icon {
     height: 300px;
     width: 300px;
@@ -1799,24 +1803,24 @@ html {
     border-radius: 300px;
   }
 }
-/* line 1704, ../sass/screen.scss */
+/* line 1703, ../sass/screen.scss */
 #servicios-main-container h1 {
   font-variant: small-caps;
 }
-/* line 1710, ../sass/screen.scss */
+/* line 1709, ../sass/screen.scss */
 #servicios-main-container h1, #servicios-main-container h2 {
   margin-top: 10px;
   margin-bottom: 10px;
   text-align: center;
 }
 @media (min-width: 600px) {
-  /* line 1710, ../sass/screen.scss */
+  /* line 1709, ../sass/screen.scss */
   #servicios-main-container h1, #servicios-main-container h2 {
     text-align: left;
   }
 }
 
-/* line 1721, ../sass/screen.scss */
+/* line 1720, ../sass/screen.scss */
 #contacto-container button {
   width: 110px;
   font-family: 'Lato Heavy', serif;
@@ -1836,13 +1840,13 @@ html {
   text-decoration: none;
 }
 
-/* line 1740, ../sass/screen.scss */
+/* line 1739, ../sass/screen.scss */
 #contacto-container button:hover {
   color: white;
   background-color: #133548;
 }
 
-/* line 1748, ../sass/screen.scss */
+/* line 1747, ../sass/screen.scss */
 .administracion-slider {
   display: flex;
   flex-direction: row;
@@ -1851,7 +1855,7 @@ html {
   margin-bottom: 10px;
 }
 
-/* line 1757, ../sass/screen.scss */
+/* line 1756, ../sass/screen.scss */
 .administracion-slider .administracion-input {
   padding-top: 0px !important;
 }
